--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,6 +20,13 @@
           "svelte.svelte-vscode"
         ]
       }
+    },
+    "features": {
+        "ghcr.io/devcontainers/features/python:1": {
+            "installTools": true,
+            "installJupyterlab": true,
+            "version": "3.11"
+        }
     }
     // "forwardPorts": [3000]
   }
